# datasheet_extraction

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: README.md
corpus/demo/: gold.json  ls-16.txt  mmw-2440.txt  rdx-7700.txt  syn-baro.txt  syn-sonar.txt  syn-temp.txt  syn-tof.txt  trx-9.txt
corpus/sensors/: README.md  fetch.py  gold.json
results/: ablation-2026-07-16-demo.json  ablation-2026-07-17-sensors.json
src/datasheet_extraction/: __init__.py  cli.py  compare.py  corpus.py  cost.py  evaluate.py  extract.py  prompts.py  schema.py
tests/: test_compare.py  test_corpus.py  test_evaluate.py  test_extract.py  test_schema_and_cost.py
