[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasheet-extraction"
version = "0.1.0"
description = "Structured extraction of sensor specifications from datasheets, with an evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.116",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
datasheet-extraction = "datasheet_extraction.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datasheet_extraction"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
